--- a/AnalyzerControlApp/PresentationWpf/PresentationWPF.csproj
+++ b/AnalyzerControlApp/PresentationWpf/PresentationWPF.csproj
@@ -172,9 +172,9 @@
       <Project>{33e1fe15-0dde-4efb-8359-cd035c95e16d}</Project>
       <Name>AnalyzerConfiguration</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AnalyzerControlCore\AnalyzerControlCore.csproj">
+    <ProjectReference Include="..\AnalyzerControlCore\AnalyzerService.csproj">
       <Project>{c75697ab-d456-44eb-86a4-a1c23bc776ec}</Project>
-      <Name>AnalyzerControlCore</Name>
+      <Name>AnalyzerService</Name>
     </ProjectReference>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
       <Project>{6dcff691-ffbb-45b4-90a9-36806ae27d02}</Project>
