--- a/AnalyzerControlApp/AnalyzerCncControl/AnalyzerCncControl.csproj
+++ b/AnalyzerControlApp/AnalyzerCncControl/AnalyzerCncControl.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C75697AB-D456-44EB-86A4-A1C23BC776EC}</ProjectGuid>
+    <ProjectGuid>{98E63E4E-12CE-4F4E-B016-38FBD49AECAA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AnalyzerControlCore</RootNamespace>
-    <AssemblyName>AnalyzerControlCore</AssemblyName>
+    <RootNamespace>AnalyzerCncControl</RootNamespace>
+    <AssemblyName>AnalyzerCncControl</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,8 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>7.2</LangVersion>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,7 +29,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -45,42 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DemoController.cs" />
-    <Compile Include="MachineControl\ParserRegexes.cs" />
-    <Compile Include="MachineControl\ICommandExecutor.cs" />
-    <Compile Include="MachineControl\CommandExecutor.cs" />
-    <Compile Include="MachineControl\CommandParser.cs" />
-    <Compile Include="MachineControl\TaskExecutor.cs" />
-    <Compile Include="AnalyzerGateway.cs" />
+    <Compile Include="CommandsParser.cs" />
+    <Compile Include="Regexes\ParserRegexes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Units\UnitBase.cs" />
-    <Compile Include="Units\NeedleUnit.cs" />
-    <Compile Include="Units\ChargerUnit.cs" />
-    <Compile Include="Units\PompUnit.cs" />
-    <Compile Include="Units\RotorUnit.cs" />
-    <Compile Include="Units\ConveyorUnit.cs" />
-    <Compile Include="Utils\RegexHelper.cs" />
+    <Compile Include="Regexes\RegexHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AnalyzerCommunication\AnalyzerCommunication.csproj">
-      <Project>{995b3702-b9dc-45b6-91ea-5cccc7aec7ce}</Project>
+      <Project>{995B3702-B9DC-45B6-91EA-5CCCC7AEC7CE}</Project>
       <Name>AnalyzerCommunication</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AnalyzerConfiguration\AnalyzerConfiguration.csproj">
-      <Project>{33e1fe15-0dde-4efb-8359-cd035c95e16d}</Project>
-      <Name>AnalyzerConfiguration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\AnalyzerDomain\AnalyzerDomain.csproj">
-      <Project>{17d7a05e-c6d1-4892-b92a-fb3741ab588f}</Project>
-      <Name>AnalyzerDomain</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
-      <Project>{6dcff691-ffbb-45b4-90a9-36806ae27d02}</Project>
+      <Project>{6DCFF691-FFBB-45B4-90A9-36806AE27D02}</Project>
       <Name>Infrastructure</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entyties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
