--- a/AnalyzerControlApp/AnalyzerControlCore/AnalyzerService.csproj
+++ b/AnalyzerControlApp/AnalyzerControlCore/AnalyzerService.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{33E1FE15-0DDE-4EFB-8359-CD035C95E16D}</ProjectGuid>
+    <ProjectGuid>{C75697AB-D456-44EB-86A4-A1C23BC776EC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AnalyzerConfiguration</RootNamespace>
-    <AssemblyName>AnalyzerConfiguration</AssemblyName>
+    <RootNamespace>AnalyzerControlCore</RootNamespace>
+    <AssemblyName>AnalyzerControlCore</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -35,9 +35,6 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,26 +45,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnalyzerAppConfiguration.cs" />
-    <Compile Include="ConfigurationHelper.cs" />
-    <Compile Include="JsonConfigurationProvider.cs" />
-    <Compile Include="UnitsConfiguration\ChargerConfiguration.cs" />
-    <Compile Include="IConfigurationProvider.cs" />
-    <Compile Include="UnitsConfiguration\NeedleConfiguration.cs" />
-    <Compile Include="UnitsConfiguration\PompConfiguration.cs" />
-    <Compile Include="UnitsConfiguration\RotorConfiguration.cs" />
-    <Compile Include="UnitsConfiguration\ConveyorConfiguration.cs" />
+    <Compile Include="MachineControl\ICommandExecutor.cs" />
+    <Compile Include="MachineControl\CommandExecutor.cs" />
+    <Compile Include="MachineControl\TaskExecutor.cs" />
+    <Compile Include="Analyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XmlConfigurationProvider.cs" />
+    <Compile Include="Units\UnitBase.cs" />
+    <Compile Include="Units\NeedleUnit.cs" />
+    <Compile Include="Units\ChargerUnit.cs" />
+    <Compile Include="Units\PompUnit.cs" />
+    <Compile Include="Units\RotorUnit.cs" />
+    <Compile Include="Units\ConveyorUnit.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\AnalyzerCommunication\AnalyzerCommunication.csproj">
+      <Project>{995b3702-b9dc-45b6-91ea-5cccc7aec7ce}</Project>
+      <Name>AnalyzerCommunication</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AnalyzerConfiguration\AnalyzerConfiguration.csproj">
+      <Project>{33e1fe15-0dde-4efb-8359-cd035c95e16d}</Project>
+      <Name>AnalyzerConfiguration</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AnalyzerDomain\AnalyzerDomain.csproj">
       <Project>{17d7a05e-c6d1-4892-b92a-fb3741ab588f}</Project>
       <Name>AnalyzerDomain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
+      <Project>{6dcff691-ffbb-45b4-90a9-36806ae27d02}</Project>
+      <Name>Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
