Separate Analyzer and SerialConnection projects. Move response handlers in AnalyzerService project. Make Analyzer configurable and fix bugs with statics properties in Analyzer... (should be made more beautiful than now...)

--- a/AnalyzerControlApp/AnalyzerControlCore/AnalyzerService.csproj
+++ b/AnalyzerControlApp/AnalyzerControlCore/AnalyzerService.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C75697AB-D456-44EB-86A4-A1C23BC776EC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AnalyzerControlCore</RootNamespace>
-    <AssemblyName>AnalyzerControlCore</AssemblyName>
+    <RootNamespace>AnalyzerService</RootNamespace>
+    <AssemblyName>AnalyzerService</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -45,11 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MachineControl\ICommandExecutor.cs" />
-    <Compile Include="MachineControl\CommandExecutor.cs" />
-    <Compile Include="MachineControl\TaskExecutor.cs" />
+    <Compile Include="AnalyzerState.cs" />
+    <Compile Include="ExecutionControl\ICommandExecutor.cs" />
+    <Compile Include="ExecutionControl\CommandExecutor.cs" />
+    <Compile Include="ExecutionControl\TaskExecutor.cs" />
     <Compile Include="Analyzer.cs" />
+    <Compile Include="IAnalyzerState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponseHandler.cs" />
     <Compile Include="Units\UnitBase.cs" />
     <Compile Include="Units\NeedleUnit.cs" />
     <Compile Include="Units\ChargerUnit.cs" />
