Add AnalyzerControlGUI project. Modify entities in AnalyzerDomain. Add Entity Framework Core and SQLite to data store. Add cartridges management system using MVVM.

--- a/AnalyzerControlApp/AnalyzerControlCore/AnalyzerService.csproj
+++ b/AnalyzerControlApp/AnalyzerControlCore/AnalyzerService.csproj
@@ -78,6 +78,8 @@
       <Name>Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
