--- a/AnalyzerControlApp/AnalyzerControl/AnalyzerControl.csproj
+++ b/AnalyzerControlApp/AnalyzerControl/AnalyzerControl.csproj
@@ -69,5 +69,8 @@
       <Name>Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
