--- a/AnalyzerControlApp/AnalyzerControlGUI/AnalyzerControlGUI.csproj
+++ b/AnalyzerControlApp/AnalyzerControlGUI/AnalyzerControlGUI.csproj
@@ -182,8 +182,8 @@
     <Compile Include="Views\AnalyzesWindow.xaml.cs">
       <DependentUpon>AnalyzesWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\CartridgeModelsWindow.xaml.cs">
-      <DependentUpon>CartridgeModelsWindow.xaml</DependentUpon>
+    <Compile Include="Views\CartridgesWindow.xaml.cs">
+      <DependentUpon>CartridgesWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\EditAnalysisTypeWindow.xaml.cs">
       <DependentUpon>EditAnalysisTypeWindow.xaml</DependentUpon>
@@ -214,7 +214,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\CartridgeModelsWindow.xaml">
+    <Page Include="Views\CartridgesWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
