--- a/AnalyzerControlApp/AnalyzerDomain/AnalyzerDomain.csproj
+++ b/AnalyzerControlApp/AnalyzerDomain/AnalyzerDomain.csproj
@@ -161,13 +161,9 @@
     <Compile Include="Entyties\AnalysisInfo.cs" />
     <Compile Include="Entyties\CartridgeCell.cs" />
     <Compile Include="Entyties\Stage.cs" />
-    <Compile Include="Migrations\20210416214411_InitialCreate-Cartridges.cs" />
-    <Compile Include="Migrations\20210416214411_InitialCreate-Cartridges.designer.cs">
-      <DependentUpon>20210416214411_InitialCreate-Cartridges.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\20210417104248_Add-AnalysisType-simple.cs" />
-    <Compile Include="Migrations\20210417104248_Add-AnalysisType-simple.designer.cs">
-      <DependentUpon>20210417104248_Add-AnalysisType-simple.cs</DependentUpon>
+    <Compile Include="Migrations\20210417202334_InitialCreate.cs" />
+    <Compile Include="Migrations\20210417202334_InitialCreate.designer.cs">
+      <DependentUpon>20210417202334_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\AnalyzerContextModelSnapshot.cs" />
     <Compile Include="Models\Analysis.cs" />
@@ -183,6 +179,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
