--- a/AnalyzerControlApp/AnalyzerControl/AnalyzerControl.csproj
+++ b/AnalyzerControlApp/AnalyzerControl/AnalyzerControl.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Configuration\DemoControllerConfiguration.cs" />
     <Compile Include="Entyties\ConveyorCell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CartridgesDeckService.cs" />
     <Compile Include="Services\RotorService.cs" />
   </ItemGroup>
   <ItemGroup>
