--- a/AnalyzerControlApp/AnalyzerControl/AnalyzerControl.csproj
+++ b/AnalyzerControlApp/AnalyzerControl/AnalyzerControl.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Entyties\ConveyorCell.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CartridgesDeckService.cs" />
+    <Compile Include="Services\ConveyorService.cs" />
     <Compile Include="Services\RotorService.cs" />
   </ItemGroup>
   <ItemGroup>
