--- a/AnalyzerControlApp/AnalyzerControlGUI/AnalyzerControlGUI.csproj
+++ b/AnalyzerControlApp/AnalyzerControlGUI/AnalyzerControlGUI.csproj
@@ -167,10 +167,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AnalyzerControlWindow.xaml.cs">
+      <DependentUpon>AnalyzerControlWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Converters\BoolToIndexConverter.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Converters\StringToIntConverter.cs" />
+    <Compile Include="CustomControls\CartridgeCassetteControl.xaml.cs">
+      <DependentUpon>CartridgeCassetteControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Services\DialogCloser.cs" />
     <Compile Include="ViewModels\AnalysisTypesManagementViewModel.cs" />
     <Compile Include="ViewModels\AnalyzesManagementViewModel.cs" />
@@ -181,6 +187,8 @@
     <Compile Include="ViewModels\EditCartridgeViewModel.cs" />
     <Compile Include="ViewModels\mainViewModel.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
+    <Compile Include="ViewsHelpers\ConveyorHelper.cs" />
+    <Compile Include="ViewsHelpers\GraphMath.cs" />
     <Compile Include="Views\AnalysisTypesWindow.xaml.cs">
       <DependentUpon>AnalysisTypesWindow.xaml</DependentUpon>
     </Compile>
@@ -202,6 +210,14 @@
     <Compile Include="Views\EditCartridgeModelWindow.xaml.cs">
       <DependentUpon>EditCartridgeModelWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="AnalyzerControlWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CustomControls\CartridgeCassetteControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -214,6 +230,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Resources\Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\AnalysisTypesWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
