--- a/AnalyzerControlApp/AnalyzerControlGUI/AnalyzerControlGUI.csproj
+++ b/AnalyzerControlApp/AnalyzerControlGUI/AnalyzerControlGUI.csproj
@@ -174,6 +174,9 @@
     <Compile Include="Views\CustomViews\CartridgeCassetteControl.xaml.cs">
       <DependentUpon>CartridgeCassetteControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\CustomViews\ConveyorControl.xaml.cs">
+      <DependentUpon>ConveyorControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Windows\AnalyzerControlWindow.xaml.cs">
       <DependentUpon>AnalyzerControlWindow.xaml</DependentUpon>
     </Compile>
@@ -215,6 +218,10 @@
       <DependentUpon>EditCartridgeModelWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\CustomViews\CartridgeCassetteControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CustomViews\ConveyorControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
