--- a/AnalyzerControlApp/AnalyzerControlGUI/AnalyzerControlGUI.csproj
+++ b/AnalyzerControlApp/AnalyzerControlGUI/AnalyzerControlGUI.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Models\Cassette.cs" />
     <Compile Include="Models\ConveyorCell.cs" />
     <Compile Include="ViewModels\AnalyzerControlViewModel.cs" />
+    <Compile Include="ViewsHelpers\AutoScrollHelper.cs" />
     <Compile Include="Views\CustomViews\CartridgeCassetteControl.xaml.cs">
       <DependentUpon>CartridgeCassetteControl.xaml</DependentUpon>
     </Compile>
