Fix barcode scan command - add scanner id.

--- a/AnalyzerControlApp/AnalyzerCommunication/AnalyzerCommunication.csproj
+++ b/AnalyzerControlApp/AnalyzerCommunication/AnalyzerCommunication.csproj
@@ -47,7 +47,7 @@
   <ItemGroup>
     <Compile Include="CommunicationProtocol\AbstractCommand.cs" />
     <Compile Include="CommunicationProtocol\AdditionalCommands\AbortExecutionCommand.cs" />
-    <Compile Include="CommunicationProtocol\AdditionalCommands\BarStartCommand.cs" />
+    <Compile Include="CommunicationProtocol\AdditionalCommands\ScanBarcodeCommand.cs" />
     <Compile Include="CommunicationProtocol\AdditionalCommands\GetFirmwareVersionCommand.cs" />
     <Compile Include="CommunicationProtocol\AdditionalCommands\SetDeviceStateCommand.cs" />
     <Compile Include="CommunicationProtocol\AdditionalCommands\WaitTimeCommand.cs" />
@@ -59,7 +59,7 @@
     <Compile Include="CommunicationProtocol\CncCommands\SetSpeedCncCommand.cs" />
     <Compile Include="CommunicationProtocol\CncCommands\SteppersCncCommand.cs" />
     <Compile Include="CommunicationProtocol\Responses\AbstaractResponse.cs" />
-    <Compile Include="CommunicationProtocol\Responses\BarCodeResponse.cs" />
+    <Compile Include="CommunicationProtocol\Responses\BarcodeResponse.cs" />
     <Compile Include="CommunicationProtocol\Responses\CommandStateResponse.cs" />
     <Compile Include="CommunicationProtocol\Responses\DebugResponse.cs" />
     <Compile Include="CommunicationProtocol\Responses\FirmwareVersionResponse.cs" />
